--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 </head>
 <body>
     <div class="cloud">
-        <div class="headline"><span>Der Spruch des Tages</span></div>
+        <div class="headline"><img src="https://i.ibb.co/NScq9XY/dsdt.png"></div>
     </div>
     <br />
     <div id="quote" class="quotation"></div>
