--- a/index.html
+++ b/index.html
@@ -100,7 +100,8 @@
             "Ja... Nee",
             "Wir haben den Graf Lustikus",
             "Den zieh mehr etz mal lang",
-            "Da steht Ventilator drauf... auf Spanisch"
+            "Da steht Ventilator drauf... auf Spanisch",
+            "Da sitzt man den ganzen Tag nur rum und schiebt USB sticks in irgendwelchen Schlitze"
         ];
 
         // Function to display a random quote
