--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
             "Wir haben den Graf Lustikus",
             "Den zieh mehr etz mal lang",
             "Da steht Ventilator drauf... auf Spanisch",
-            "Da sitzt man den ganzen Tag nur rum und schiebt USB sticks in irgendwelchen Schlitze"
+            "Da sitzt man den ganzen Tag nur rum und schiebt USB sticks in irgendwelche Schlitze"
         ];
 
         // Function to display a random quote
