--- a/index.html
+++ b/index.html
@@ -101,7 +101,8 @@
             "Wir haben den Graf Lustikus",
             "Den zieh mehr etz mal lang",
             "Da steht Ventilator drauf... auf Spanisch",
-            "Da sitzt man den ganzen Tag nur rum und schiebt USB sticks in irgendwelche Schlitze"
+            "Da sitzt man den ganzen Tag nur rum und schiebt USB sticks in irgendwelche Schlitze",
+            "Weil's einfach schöner ist wenn's schön ist"
         ];
 
         // Function to display a random quote
