--- a/index.html
+++ b/index.html
@@ -102,7 +102,8 @@
             "Den zieh mehr etz mal lang",
             "Da steht Ventilator drauf... auf Spanisch",
             "Da sitzt man den ganzen Tag nur rum und schiebt USB sticks in irgendwelche Schlitze",
-            "Weil's einfach schöner ist wenn's schön ist"
+            "Weil's einfach schöner ist wenn's schön ist";
+            "Low budget, cheap and ugly, Mach’s dir selber"
         ];
 
         // Function to display a random quote
