--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         .cloud {
             height: 200px;
             padding: 40px;
-            background-image: url("https://gcdnb.pbrd.co/images/TgNCa8sEirtS.png");
+            background-image: url("https://raw.githubusercontent.com/LG-PHTN/LG-PHTN.github.io/main/cloud.png");
             background-repeat: repeat;
             background-position: center;
             display: flex;
@@ -61,7 +61,7 @@
 </head>
 <body>
     <div class="cloud">
-        <div class="headline"><img src="https://i.ibb.co/NScq9XY/dsdt.png"></div>
+        <div class="headline"><img src="https://raw.githubusercontent.com/LG-PHTN/LG-PHTN.github.io/main/dsdt.png"></div>
     </div>
     <br />
     <div id="quote" class="quotation"></div>
