--- a/index.html
+++ b/index.html
@@ -103,7 +103,9 @@
             "Da steht Ventilator drauf... auf Spanisch",
             "Da sitzt man den ganzen Tag nur rum und schiebt USB sticks in irgendwelche Schlitze",
             "Weil's einfach schöner ist wenn's schön ist",
-            "Low budget, cheap and ugly, Mach’s dir selber"
+            "Low budget, cheap and ugly, Mach’s dir selber",
+            "Ich hasse, dass wir immer diese Veranstaltungen machen müssen",
+            "Man muss einfach mal die Autisten machen lassen"
         ];
 
         // Function to display a random quote
